--- a/style.scss
+++ b/style.scss
@@ -47,6 +47,11 @@
     & form{
         width: 100%;
         & .input{
+
+            & .controller{
+                border-radius: 20px;
+                width: 500px;
+            }
             & input{
                 border-radius: 20px;
             }
@@ -55,6 +60,18 @@
             display: flex;
             align-items: center;
             justify-content: space-evenly;
+
+            & button{
+                & a{
+                    text-decoration: none;
+                    color: black;
+                }
+
+                &:hover{
+                    border: 1px solid rgb(206, 202, 202);
+                }
+
+            }
 
             & input{
                 &:hover{
@@ -73,8 +90,6 @@
 .container{
     display:flex;
     flex-direction: column;
-    // align-items: center;
-    // justify-content: center;
     width: 100vw;
  
 
@@ -108,6 +123,10 @@
         margin-left: -7%;
         display: flex;
         flex-direction:column;
+
+        & h5{
+            color: rgb(201, 29, 29);
+        }
 
         & form{
                 & .btn{
